# learn_opengl

./: CMakeLists.txt  README.md
res/shaders/: fragment.shader  fragment.shader.chap8  vertex.shader  vertex.shader.chap8
src/: camera.cpp  camera.h  main.cpp  main.cpp.chap8  shader.cpp  shader.h
